tests/shadowing.m31.ref
File "./shadowing.m31", line 19, characters 1-16: Syntax error
  Constructor x is already declared.
